--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "typecheck:watch": "tsc --noEmit --watch"
   },
   "dependencies": {
-    "commander": "^12.0.0"
+    "commander": "^12.0.0",
+    "tag-composer": "^0.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
