--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "commander": "^12.0.0",
-    "tag-composer": "^0.1.1"
+    "tag-composer": "latest"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
