--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "commander": "^12.0.0",
-    "tag-composer": "latest"
+    "tag-composer": "latest",
+    "tiktoken": "^1.0.21"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
