Configure pnpm override to use global tag-composer installation and enable pascal case tag formatting

--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "pnpm": {
+    "overrides": {
+      "tag-composer": "link:../../.local/share/pnpm/global/5/node_modules/tag-composer"
+    }
   }
 }
