--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "dependencies": {
     "commander": "^12.0.0",
+    "prompts": "^2.4.2",
     "tag-composer": "latest",
     "tiktoken": "^1.0.21"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/prompts": "^2.4.9",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
     "tsup": "^8.0.0",
