Rename package from context-composer-cli to context-composer
Updates package name to remove the -cli suffix for cleaner branding.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "context-composer-cli",
+  "name": "context-composer",
   "version": "0.1.1",
   "author": "Mike Bannister <notimpossiblemike@gmail.com>",
   "license": "MIT",
