Add files field to package.json to include dist and readme.md in npm package

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "bin": {
     "context-composer": "./dist/cli.js"
   },
+  "files": [
+    "dist",
+    "readme.md"
+  ],
   "scripts": {
     "build": "tsup",
     "build:watch": "nodemon --watch src/ --ext ts --exec tsup",
