--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "release:major": "./release.sh major"
   },
   "dependencies": {
+    "bash-parser": "^0.5.0",
     "commander": "^12.0.0",
     "prompts": "^2.4.2",
     "tag-composer": "latest",
